--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -440,7 +440,8 @@
                                 > p:last-child {
                                     font-size: 16px;
                                     color: #535353;
-                                    margin-top: 26px;
+                                    margin-top: 40px;
+                                    margin-bottom: 20px;
                                 }
                                 
                             }
