--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -465,14 +465,13 @@
                     }
                     
                     > #review-form {
-                        height: 100vh;
-                        width: 100vw;
+                        height: 100%;
+                        width: 100%;
                         display: flex;
                         align-items: center;
                         justify-content: center;
                         background: rgba(0, 0, 0, 0.75);
                         position: absolute;
-                        top: 0px;
                         left: 0px;
                         z-index: 10;
 
