Add fn to get nearby trails

--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -602,6 +602,11 @@
 
              >#nearby-trails {
                 background: yellow;
+                display: flex;
+                flex-direction: column;
+
+                
+                
             }
             
         }
