--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -601,11 +601,78 @@
             }
 
              >#nearby-trails {
-                background: yellow;
                 display: flex;
                 flex-direction: column;
 
-                
+                > a {
+                    height: 300px;
+                    width: 300px;
+                    padding: 8px;
+                    transition: all 0.1s ease-in-out;
+
+                    > img {
+                        width: 100%;
+                        border-radius: 25px;
+                    }
+
+                    > div:nth-child(2) {
+                        margin-top: 4px;
+                        color: rgb(75, 75, 75);
+                        font-size: 12px;
+                        display: flex;
+                        align-items: center;
+
+                        > span {
+                            border-radius: 6px;
+                            padding: 4px 8px 4px 8px;
+                            color: white;
+                            margin-right: 2px;
+                        }
+                        
+                        > .easy {
+                            background-color: #428a13;
+                        }
+
+                        > .moderate {
+                            background-color: rgb(0, 180, 255);
+                        }
+
+                        > .hard {
+                            background-color: rgb(80, 80, 80);
+                        }
+
+                        > img {
+                            height: 14px;
+                            width: 14px;
+                            margin-left: 2px;
+                        }
+                        
+                    }
+
+                    > div:nth-child(3) {
+                        margin-top: 6px;
+                        color: rgb(75, 75, 75);
+                        font-weight: bold;
+                        font-size: 15px;
+                    }
+
+                    > div:nth-child(4) {
+                        margin-top: 4px;
+                        color: rgb(120, 120, 120);
+                        font-size: 12px;
+                    }
+
+                    > div:nth-child(5) {
+                        margin-top: 4px;
+                        color: rgb(120, 120, 120);
+                        font-size: 12px;
+                    }
+                    
+                }
+
+                > a:hover {
+                    background: rgb(220, 220, 220);
+                }
                 
             }
             
