Refactor map comp out of explore comp

--- a/app/assets/stylesheets/api/explore.scss
+++ b/app/assets/stylesheets/api/explore.scss
@@ -1,8 +1,15 @@
 #explore-page {
     margin-top: 65px;
 
-    > #map-container {
-        height: 800px;
+    > section:first-child {
+
+    }
+
+    > section:last-child {
+        
+        > #map-container {
+            height: 800px;
+        }
     }
     
 }
