--- a/app/assets/stylesheets/api/explore.scss
+++ b/app/assets/stylesheets/api/explore.scss
@@ -116,7 +116,37 @@
 
         }
         
-        
+        > div {
+            position: relative;
+            padding: 15px;
+
+            > button {
+                background: none;
+                border: 2px solid rgb(200, 200, 200);
+                color: gray;
+                border-radius: 50px;
+                padding: 6px 16px;
+                display: flex;
+                align-items: center;
+
+                > img {
+                    filter: grayscale(1);
+                    height: 12px;
+                    margin-left: 2px;
+                }
+
+            }
+
+            > button:hover {
+                border: 2px solid #52a917;
+                color: #52a917;
+
+                > img {
+                    filter: none;
+                }
+            }
+            
+        }
         
     }
 
