--- a/app/assets/stylesheets/api/explore.scss
+++ b/app/assets/stylesheets/api/explore.scss
@@ -7,7 +7,7 @@
         position: relative;
         z-index: 1;
 
-        #search-container {
+        > #search-container {
             position: relative;
             z-index: 0;
             margin: 15px 30px;
@@ -149,6 +149,23 @@
                 > img {
                     filter: none;
                 }
+            }
+
+            > form {
+                position: absolute;
+                top: 47px;
+                background: white;
+                padding: 15px;
+                width: fit-content;
+                border: 1px solid rgb(220, 220, 220);
+                box-shadow: -7px -1px 10px -5px rgba(200, 200, 200, 0.5);
+                border-radius: 15px;
+            }
+
+            > #form-difficulty {
+                display: flex;
+                flex-direction: column;
+
             }
             
         }
