Fix data validation bug in length form

--- a/app/assets/stylesheets/api/explore.scss
+++ b/app/assets/stylesheets/api/explore.scss
@@ -207,6 +207,11 @@
                     margin: 0px 8px;
                 }
 
+                > input.error {
+                    outline: 1px solid red;
+                    border: 1px solid transparent;
+                }
+
             }
             
         }
