Complete time filter option

--- a/app/assets/stylesheets/api/explore.scss
+++ b/app/assets/stylesheets/api/explore.scss
@@ -181,7 +181,7 @@
                 
             }
 
-            > #length-form, > #gain-form {
+            > #length-form, > #gain-form, > #time-form {
                 flex-direction: row;
                 align-items: center;
 
