--- a/app/assets/stylesheets/api/explore.scss
+++ b/app/assets/stylesheets/api/explore.scss
@@ -157,7 +157,7 @@
                 top: 36px;
                 background: white;
                 padding: 15px;
-                width: fit-content;
+                width: max-content;
                 border: 1px solid rgb(220, 220, 220);
                 box-shadow: -7px -1px 10px -5px rgba(200, 200, 200, 0.5);
                 border-radius: 15px;
