--- a/app/assets/stylesheets/api/explore.scss
+++ b/app/assets/stylesheets/api/explore.scss
@@ -241,9 +241,90 @@
 
     > section:last-child {
         position: relative;
+        display: flex;
+        
+        > #trails-sidebar {
+            width: 320px;
+            height: 660px;
+            overflow-y: scroll;
+            overflow-x: hidden; 
+            display: flex;
+            flex-direction: column;
+            align-items: center;           
+
+            > a {
+                transition: all 0.1s ease-in-out;
+                padding: 10px;
+
+                > img {
+                    width: 285px;
+                    border-radius: 25px;
+                }
+
+                > div:nth-child(2) {
+                    margin-top: 4px;
+                    color: rgb(75, 75, 75);
+                    font-size: 12px;
+                    display: flex;
+                    align-items: center;
+
+                    > span {
+                        border-radius: 6px;
+                        padding: 4px 8px 4px 8px;
+                        color: white;
+                        margin-right: 2px;
+                    }
+                    
+                    > .easy {
+                        background-color: #428a13;
+                    }
+
+                    > .moderate {
+                        background-color: rgb(0, 180, 255);
+                    }
+
+                    > .hard {
+                        background-color: rgb(80, 80, 80);
+                    }
+
+                    > img {
+                        height: 14px;
+                        width: 14px;
+                        margin-left: 2px;
+                    }
+                    
+                }
+
+                > div:nth-child(3) {
+                    margin-top: 6px;
+                    color: rgb(75, 75, 75);
+                    font-weight: bold;
+                    font-size: 15px;
+                }
+
+                > div:nth-child(4) {
+                    margin-top: 4px;
+                    color: rgb(120, 120, 120);
+                    font-size: 12px;
+                }
+
+                > div:nth-child(5) {
+                    margin-top: 4px;
+                    color: rgb(120, 120, 120);
+                    font-size: 12px;
+                }
+                
+            }
+
+            > a:hover {
+                background: rgb(220, 220, 220)
+            }
+            
+        }
         
         > #map-container {
-            height: 500px;
+            height: 660px;
+            flex-grow: 1;
         }
     }
     
