--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -5,19 +5,19 @@
     align-items: center;
     background: rgb(240, 240, 240);
     color: rgb(75, 75, 75);
-    
+
     > div {
         width: 1000px;
-        
+
         > #location-tree {
             display: flex;
             align-items: center;
             justify-content: space-between;
             height: 50px;
-            position: relative; 
+            position: relative;
             z-index: 2;
             padding-left: 12px;
-    
+
             > div {
                 font-size: 12px;
 
@@ -26,11 +26,11 @@
                 }
 
             }
-    
+
             #search-container {
                 position: relative;
                 z-index: 0;
-    
+
                 #search-bar {
                     position: relative;
                     z-index: 2;
@@ -42,11 +42,11 @@
                     width: 300px;
                     border-radius: 10px;
                     border: 1px solid rgb(220, 220, 220);
-        
+
                     > img:first-child {
                         display: none;
                     }
-        
+
                     > input {
                         font-size: 14px;
                         font-weight: 400;
@@ -55,11 +55,11 @@
                         width: 264px;
                         padding-left: 14px;
                     }
-        
+
                     > input:focus {
                         outline: none;
                     }
-    
+
                     > button {
                         border: none;
                         background-image: url("/trail_images/search_icon.png");
@@ -73,14 +73,14 @@
                         position: relative;
                         left: 2px;
                     }
-    
+
                     > button:hover {
                         opacity: 0.75;
                         cursor: pointer;
                     }
-                    
+
                 }
-        
+
                 > #search-modal {
                     position: absolute;
                     z-index: 1;
@@ -90,7 +90,7 @@
                     width: 300px;
                     background: white;
                     overflow-y: scroll;
-        
+
                     > a {
                         display: flex;
                         align-items: center;
@@ -98,28 +98,28 @@
                         height: 40px;
                         border-bottom: 0.25px solid rgba(190, 190, 190, 0.25);
                         color: rgb(70, 70, 70);
-        
+
                         > img {
                             filter: hue-rotate(70deg);
                             height: 20px;
                             margin-left: 10px;
                         }
-        
+
                         > article {
                             margin-left: 10px;
-        
+
                             > div:first-child {
                                 font-size: 14px;
                             }
-        
+
                             > div:last-child {
                                 display: none;
                             }
-                            
+
                         }
-                        
+
                     }
-        
+
                     > a:hover {
                         background-color: #52a917;
                         color: white;
@@ -128,21 +128,21 @@
                         > img {
                             filter: brightness(0%) opacity(0.5);
                         }
-                        
+
                     }
-                    
+
                 }
-    
+
             }
-            
+
         }
-        
+
         > #trail-img {
             display: flex;
             justify-content: space-between;
             height: 300px;
             position: relative;
-    
+
             > img {
                 height: 300px;
                 width: 100%;
@@ -163,7 +163,7 @@
                 > div {
                     color: white;
                     margin: 0px 0px 50px 35px;
-                    
+
                     > p:nth-child(1) {
                         font-size: 24px;
                         font-weight: bold;
@@ -180,7 +180,7 @@
                             color: white;
                             margin-right: 2px;
                         }
-                        
+
                         > .easy {
                             background-color: #428a13;
                         }
@@ -192,14 +192,14 @@
                         > .hard {
                             background-color: rgb(80, 80, 80);
                         }
-                        
+
                         > img {
                             height: 20px;
                             margin: 0px 0px 4px 12px;
                         }
-                        
+
                     }
-                    
+
                 }
 
                 > #star {
@@ -208,7 +208,7 @@
                     margin: 0px 35px 50px 0px;
                     filter: invert(100%);
                 }
-    
+
                 > #star:hover {
                     transform: scale(1.25);
                     cursor: pointer;
@@ -216,13 +216,13 @@
 
             }
 
-            
+
         }
 
         > section {
             display: flex;
             background: white;
-            
+
             > #trail-details {
                 flex-grow: 1;
                 border: 1px solid rgb(200, 200, 200);
@@ -244,11 +244,11 @@
                             font-weight: bold;
                             margin: 8px;
                         }
-                        
+
                     }
-                    
+
                 }
-                
+
                 > #map {
 
                     > section:first-child {
@@ -259,7 +259,7 @@
                         justify-content: center;
                         padding: 24px;
                         border-top: 1px solid #c8c8c8;
-                        
+
                         > h2 {
                             color: #428a13;
                             font-size: 22px;
@@ -279,7 +279,7 @@
                             border-radius: 15px;
                         }
                     }
-                    
+
                 }
 
                 > #weather-widget {
@@ -292,7 +292,7 @@
                         justify-content: center;
                         padding: 24px;
                         border-top: 1px solid #c8c8c8;
-                        
+
                         > h2 {
                             color: #428a13;
                             font-size: 22px;
@@ -341,7 +341,7 @@
                         justify-content: center;
                         padding: 24px;
                         border-top: 1px solid #c8c8c8;
-                        
+
                         > h2 {
                             color: #428a13;
                             font-size: 22px;
@@ -382,7 +382,7 @@
                                     font-size: 14px;
                                     margin-bottom: 10px;
                                 }
-                                
+
                             }
 
                             > div:last-child {
@@ -417,9 +417,9 @@
                                     top: -30px;
                                     opacity: 1;
                                 }
-                                
+
                             }
-                            
+
                         }
 
                         > ol {
@@ -433,6 +433,15 @@
                                     font-size: 18px;
                                     font-weight: bold;
                                     margin-left: 2px;
+                                    display: flex;
+                                    align-items: center;
+
+                                    > img {
+                                        margin-right: 10px;
+                                        height: 50px;
+                                        border-radius: 50%;
+                                    }
+
                                 }
 
                                 > div {
@@ -453,24 +462,24 @@
                                         > img.filled {
                                             filter: none;
                                         }
-                                        
+
                                     }
-                                    
+
                                 }
 
                                 > p:last-child {
                                     font-size: 16px;
                                     color: #535353;
-                                    margin-top: 40px;
+                                    margin-top: 25px;
                                     margin-bottom: 20px;
                                 }
-                                
+
                             }
-                            
+
                         }
-                        
+
                     }
-                    
+
                     > #review-form {
                         height: 100%;
                         width: 100%;
@@ -498,18 +507,18 @@
                                     height: 24px;
                                     width: 32px;
                                 }
-    
+
                                 > img:hover {
                                     opacity: 0.7;
                                     cursor: pointer;
                                 }
-    
+
                                 > h3 {
                                     font-size: 30px;
                                     font-weight: bold;
                                     margin-top: 24px;
                                 }
-    
+
                                 > div:nth-child(3) {
                                     margin-top: 24px;
 
@@ -540,9 +549,9 @@
                                     //     transform: scale(1.15);
                                     //     filter: none;
                                     // }
-                                    
+
                                 }
-    
+
                                 > textarea {
                                     border-radius: 10px;
                                     border: 1px solid #e6e6e6;
@@ -556,7 +565,7 @@
                                     font-family: 'Times New Roman', Times, serif;
                                     resize: none;
                                 }
-    
+
                                 > textarea:focus {
                                     outline: none;
                                 }
@@ -564,7 +573,7 @@
                             }
 
                             > section:last-child {
-                                
+
                                 > div:last-child {
                                     display: flex;
                                     justify-content: flex-end;
@@ -589,15 +598,15 @@
                                         opacity: 0.85;
                                         cursor: pointer;
                                     }
-                                    
+
                                 }
 
                             }
                         }
                     }
-                    
+
                 }
-                
+
             }
 
              >#nearby-trails {
@@ -630,7 +639,7 @@
                             color: white;
                             margin-right: 2px;
                         }
-                        
+
                         > .easy {
                             background-color: #428a13;
                         }
@@ -648,7 +657,7 @@
                             width: 14px;
                             margin-left: 2px;
                         }
-                        
+
                     }
 
                     > div:nth-child(3) {
@@ -669,18 +678,18 @@
                         color: rgb(120, 120, 120);
                         font-size: 12px;
                     }
-                    
+
                 }
 
                 > a:hover {
                     background: rgb(220, 220, 220);
                 }
-                
+
             }
-            
+
         }
 
     }
 
-    
+
 }
