Fix trail card css

--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -633,7 +633,9 @@
 
                     > img {
                         width: 100%;
+                        height: 200px;
                         border-radius: 25px;
+                        object-fit: cover;
                     }
 
                     > div:nth-child(2) {
