--- a/app/assets/stylesheets/api/explore.scss
+++ b/app/assets/stylesheets/api/explore.scss
@@ -23,11 +23,11 @@
                 width: 300px;
                 border-radius: 10px;
                 border: 1px solid rgb(220, 220, 220);
-    
+
                 > img:first-child {
                     display: none;
                 }
-    
+
                 > input {
                     font-size: 14px;
                     font-weight: 400;
@@ -36,7 +36,7 @@
                     width: 264px;
                     padding-left: 14px;
                 }
-    
+
                 > input:focus {
                     outline: none;
                 }
@@ -59,9 +59,9 @@
                     opacity: 0.75;
                     cursor: pointer;
                 }
-                
+
             }
-    
+
             > #search-modal {
                 position: absolute;
                 z-index: 1;
@@ -71,7 +71,7 @@
                 width: 300px;
                 background: white;
                 overflow-y: scroll;
-    
+
                 > a {
                     display: flex;
                     align-items: center;
@@ -79,28 +79,28 @@
                     height: 40px;
                     border-bottom: 0.25px solid rgba(190, 190, 190, 0.25);
                     color: rgb(70, 70, 70);
-    
+
                     > img {
                         filter: hue-rotate(70deg);
                         height: 20px;
                         margin-left: 10px;
                     }
-    
+
                     > article {
                         margin-left: 10px;
-    
+
                         > div:first-child {
                             font-size: 14px;
                         }
-    
+
                         > div:last-child {
                             display: none;
                         }
-                        
+
                     }
-                    
+
                 }
-    
+
                 > a:hover {
                     background-color: #52a917;
                     color: white;
@@ -109,13 +109,13 @@
                     > img {
                         filter: brightness(0%) opacity(0.5);
                     }
-                    
+
                 }
-                
+
             }
 
         }
-        
+
         > div {
             position: relative;
             padding: 5px;
@@ -187,18 +187,18 @@
                         width: 10px;
                         margin-right: 4px;
                     }
-                    
+
                     > img {
                         height: 16px;
                         margin-bottom: 2px;
                     }
-                    
+
                 }
 
                 > label:hover {
                     color: #52a917;
                 }
-                
+
             }
 
             > #length-form, > #gain-form, > #time-form {
@@ -211,7 +211,7 @@
                     border: 1px solid rgb(160, 160, 160);
                     padding: 4px 6px;
                     text-align: center;
-                    outline: none;  
+                    outline: none;
                     color: rgb(100, 100, 100);
                 }
 
@@ -234,31 +234,33 @@
                 }
 
             }
-            
+
         }
-        
+
     }
 
     > section:last-child {
         position: relative;
         display: flex;
-        
+
         > #trails-sidebar {
             width: 320px;
             height: 660px;
             overflow-y: scroll;
-            overflow-x: hidden; 
+            overflow-x: hidden;
             display: flex;
             flex-direction: column;
-            align-items: center;           
+            align-items: center;
 
             > a {
                 transition: all 0.1s ease-in-out;
-                padding: 10px;
+                padding: 15px;
 
                 > img {
                     width: 285px;
+                    height: 200px;
                     border-radius: 25px;
+                    object-fit: cover;
                 }
 
                 > div:nth-child(2) {
@@ -274,7 +276,7 @@
                         color: white;
                         margin-right: 2px;
                     }
-                    
+
                     > .easy {
                         background-color: #428a13;
                     }
@@ -292,7 +294,7 @@
                         width: 14px;
                         margin-left: 2px;
                     }
-                    
+
                 }
 
                 > div:nth-child(3) {
@@ -313,19 +315,19 @@
                     color: rgb(120, 120, 120);
                     font-size: 12px;
                 }
-                
+
             }
 
             > a:hover {
                 background: rgb(220, 220, 220)
             }
-            
+
         }
-        
+
         > #map-container {
             height: 660px;
             flex-grow: 1;
         }
     }
-    
+
 }
