--- a/app/assets/stylesheets/api/profile.scss
+++ b/app/assets/stylesheets/api/profile.scss
@@ -1,7 +1,13 @@
 #profile-page {
     margin-top: 65px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: rgb(240, 240, 240);
+    color: rgb(75, 75, 75);
 
     > section:first-child {
+
 
         > h2 {
 
