--- a/app/assets/stylesheets/api/profile.scss
+++ b/app/assets/stylesheets/api/profile.scss
@@ -49,6 +49,9 @@
             height: 500px;
 
             > div:first-child {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
 
                 > img {
                     height: 150px;
@@ -58,11 +61,13 @@
                 }
 
                 > p:nth-child(2) {
-
+                    font-weight: bold;
+                    font-size: 16px;
+                    margin-top: 10px;
                 }
 
                 > p:last-child {
-
+                    font-size: 14px;
                 }
 
             }
@@ -71,11 +76,16 @@
                 margin-left: 25px;
 
                 > h3 {
+                    font-size: 26px;
+                    font-weight: bold;
+                }
 
+                > p {
+                    margin-top: 10px;
                 }
 
                 > p:nth-child(2) {
-
+                    font-style: italic;
                 }
 
                 > p:nth-child(3) {
