Add edit profile form validations

--- a/app/assets/stylesheets/api/profile.scss
+++ b/app/assets/stylesheets/api/profile.scss
@@ -146,6 +146,11 @@
                     border-bottom: 1px solid #428a13;
                 }
 
+                > input.error {
+                    border-bottom: 1px solid red;
+                    color: red;
+                }
+
             }
 
         }
