--- a/app/assets/stylesheets/api/profile.scss
+++ b/app/assets/stylesheets/api/profile.scss
@@ -18,6 +18,7 @@
             align-items: center;
             height: 60px;
             margin-top: -1px;
+            position: relative;
 
             > h2 {
                 font-size: 30px;
@@ -39,6 +40,36 @@
             > a:hover {
                 background: white;
                 color: rgb(41, 156, 190);
+            }
+
+            > ul {
+                position: absolute;
+                top: -30px;
+                right: 5px;
+                background: white;
+                border: 2px solid red;
+                border-radius: 15px;
+                z-index: -1;
+                padding: 15px;
+                color: red;
+                opacity: 0;
+                transition: all 0.5s ease-in-out;
+
+                > p {
+                    font-size: 18px;
+                    margin-bottom: 8px;
+                }
+
+                > li {
+                    font-size: 14px;
+                }
+
+            }
+
+            > ul.show {
+                opacity: 1;
+                z-index: 1;
+                top: 5px;
             }
 
         }
