Add change img functionality to edit profile

--- a/app/assets/stylesheets/api/profile.scss
+++ b/app/assets/stylesheets/api/profile.scss
@@ -127,6 +127,10 @@
                     cursor: pointer;
                 }
 
+                > label.error {
+                    color: red;
+                }
+
             }
 
             > div:last-child {
