--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -439,6 +439,8 @@
                                     > img {
                                         margin-right: 10px;
                                         height: 60px;
+                                        width: 60px;
+                                        object-fit: cover;
                                         border-radius: 50%;
                                     }
 
