--- a/app/assets/stylesheets/api/profile.scss
+++ b/app/assets/stylesheets/api/profile.scss
@@ -42,7 +42,7 @@
                 color: rgb(41, 156, 190);
             }
 
-            > ul {
+            > #fail-popup {
                 position: absolute;
                 top: -30px;
                 right: 5px;
@@ -66,7 +66,32 @@
 
             }
 
-            > ul.show {
+            > #fail-popup.show {
+                opacity: 1;
+                z-index: 1;
+                top: 5px;
+            }
+
+            > #success-popup {
+                position: absolute;
+                top: -30px;
+                right: 5px;
+                background: white;
+                border: 2px solid #428a13;
+                border-radius: 15px;
+                z-index: -1;
+                padding: 15px;
+                color: #428a13;
+                opacity: 0;
+                transition: all 0.5s ease-in-out;
+
+                > p {
+                    font-size: 18px;
+                }
+
+            }
+
+            > #success-popup.show {
                 opacity: 1;
                 z-index: 1;
                 top: 5px;
